browserquest-infra/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: browserquest-ingress
  namespace: browserquest
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: browserquest
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: browserquest
                port:
                  number: 8000
